# eth-pruner

./: .gitignore  LICENSE  README.md  package.json  prune.cabal  stack.yaml  test.sh
exec/Count/: Main.hs
exec/Prune/: Main.hs
exec/Restore/: Main.hs
src/: Count.hs  Database.hs  Main.hs  Prune.hs  Restore.hs
src/Prune/: ExtendedWord.hs  InsertHandler.hs  Types.hs
src_backup_withthreads/: Database.hs  Prune.hs  Restore.hs
src_backup_withthreads/Prune/: InsertHandler.hs
test/bootnode/: boot-address
test/geth/: test.sh
test/geth/bootnode/: boot-secret
test/geth/js/: callSetSimpleStorage.js  createSimpleStorage.js  selectBlock.js
test/js/: callSetSimpleStorage.js  contract.js  createSimpleStorage.js  lookUpOldState.js  selectBlock.js  selectStateRootFromBlock.js
test/keystore/: UTC--2017-07-18T17-50-20.345315968Z--5414f0e462f6013998550a728371d67eeed0bb6d  UTC--2017-07-18T17-55-18.992364807Z--06037e1daa9f4c356b84b87dbcbbc23a562f978e  UTC--2017-07-18T17-55-57.677228942Z--a82fd9c16f782676e46f3c15d16b63deae5e5afd  UTC--2017-07-18T21-55-47.856508028Z--005519a3f7c402ddc3035cd6e34f22b80a7f01ac  UTC--2017-07-18T21-56-03.365215713Z--dc6d4556dd11b091b267f156715b641dc1825fa0  UTC--2017-07-18T21-56-11.377853101Z--a947162eb55e521825aae1705f162fc40044ab4b
test/quorum/: callSetPrivateStorage.js  callSetSimpleStorage.js  createPrivateStorage.js  createPrivateStorageWithoutParticipant.js  createSimpleStorage.js  init.sh  nohup.out  package.json  privateStorageTest.js  selectBlock.js  setPrivateStorage.test.js  setStorage.test.js  storageTest.js  test.sh
test/quorum/contracts/: address1  address2  address3  address5
test/quorum/qdata/constellation1/: payload.db
test/quorum/qdata/constellation2/: payload.db
test/quorum/qdata/constellation3/: payload.db
test/quorum/qdata/constellation4/: payload.db
test/quorum/qdata/constellation5/: payload.db
test/quorum/qdata/dd1/geth/: nodekey
test/quorum/qdata/dd1/geth/chaindata/: 000131.ldb  000132.ldb  LOG  MANIFEST-000130
test/quorum/qdata/dd1/geth/nodes/: 000068.ldb  000069.ldb  LOG  MANIFEST-000071
test/quorum/qdata/dd2/geth/: nodekey
test/quorum/qdata/dd2/geth/chaindata/: 000073.ldb  000074.ldb  LOG  MANIFEST-000072
test/quorum/qdata/dd2/geth/nodes/: 000036.ldb  LOG  MANIFEST-000035
test/quorum/qdata/dd3/geth/: nodekey
test/quorum/qdata/dd3/geth/chaindata/: 000075.ldb  000076.ldb  LOG  MANIFEST-000074
test/quorum/qdata/dd3/geth/nodes/: 000036.ldb  LOG  MANIFEST-000035
test/quorum/qdata/dd4/geth/: nodekey
test/quorum/qdata/dd4/geth/chaindata/: 000075.ldb  000076.ldb  LOG  MANIFEST-000074
test/quorum/qdata/dd4/geth/nodes/: 000036.ldb  LOG  MANIFEST-000035
test/quorum/qdata/dd5/geth/: nodekey
test/quorum/qdata/dd5/geth/chaindata/: 000075.ldb  000076.ldb  LOG  MANIFEST-000074
test/quorum/qdata/dd5/geth/nodes/: 000036.ldb  LOG  MANIFEST-000035
