name: prune
version: 0.0.1
cabal-version: >=1.10
build-type: Simple
author: charlescrain
license-file:  LICENSE
maintainer:    charles@blockapps.net
synopsis: State Trie pruner for Ethereum state trie in levelDB.
category:      Data Structures
license: Apache-2.0
description: State Trie pruner for Ethereum state trie in levelDB.

source-repository this
  type:     git
  location: https://github.com/blockapps/eth-pruner
  branch:   master
  tag:      v0.0.1

library
  hs-source-dirs:        src
  ghc-options:
    -Wall
    -fwarn-unused-matches
    -fwarn-unused-binds
    -fwarn-unused-imports
  default-language:      Haskell98
  exposed-modules:   
                         Prune
  build-depends: 
                         base >= 4 && < 5
                       , ansi-wl-pprint
                       , array
                       , base16-bytestring
                       , binary
                       , bytestring
                       , cmdargs
                       , containers
                       , data-default
                       , directory
                       , filepath
                       , leveldb-haskell
                       -- , merkle-patricia-db
                       , monad-logger
                       , monad-loops
                       , mtl
                       , network
                       , process
                       , resourcet
                       , text
                       , time
                       , transformers

executable prune
    default-language:    Haskell98
    build-depends: 
                         base >= 4 && < 5
                       , ansi-wl-pprint
                       , array
                       , base16-bytestring
                       , binary
                       , bytestring
                       , cmdargs
                       , containers
                       , data-default
                       , directory
                       , filepath
                       , leveldb-haskell
                       -- , merkle-patricia-db
                       , monad-logger
                       , monad-loops
                       , mtl
                       , network
                       , process
                       , prune
                       , resourcet
                       , text
                       , time
                       , transformers
    
    buildable:           True
    main-is:             Main.hs
    hs-source-dirs:      src

