name: prune
version: 0.0.1
cabal-version: >=1.10
build-type: Simple
author: charlescrain
license-file:  LICENSE
maintainer:    charles@blockapps.net
synopsis: State Trie pruner for Ethereum state trie in levelDB.
category:      Data Structures
license: Apache-2.0
description: State Trie pruner for Ethereum state trie in levelDB.

source-repository this
  type:     git
  location: https://github.com/blockapps/eth-pruner
  branch:   master
  tag:      v0.0.1

library
    hs-source-dirs:        src
    ghc-options:
      -Wall
      -fwarn-unused-matches
      -fwarn-unused-binds
      -fwarn-unused-imports
    exposed-modules:
                         Database
                       , Prune
                       , Prune.ExtendedWord
                       , Prune.Types
                       , Prune.InsertHandler
                       , Restore
                     
    build-depends: 
                         base 
                       , ansi-wl-pprint
                       , array
                       , base16-bytestring
                       , binary
                       , blockapps-haskoin
                       , bytestring
                       , cmdargs
                       , containers
                       , data-default
                       , directory
                       , ethereum-rlp
                       , exceptions
                       , filepath
                       , leveldb-haskell
                       , merkle-patricia-db
                       , monad-logger
                       , monad-loops
                       , mtl
                       , network
                       , process
                       , resourcet
                       , text
                       , time
                       , transformers
  default-language:      Haskell2010

executable prune
    default-language:    Haskell2010
    build-depends: 
                         base >= 4 && < 5
                       , ansi-wl-pprint
                       , array
                       , base16-bytestring
                       , binary
                       , bytestring
                       , cmdargs
                       , containers
                       , data-default
                       , directory
                       , exceptions
                       , filepath
                       , leveldb-haskell
                       , merkle-patricia-db
                       , ethereum-rlp
                       , monad-logger
                       , monad-loops
                       , mtl
                       , network
                       , optparse-applicative
                       , process
                       , prune
                       , resourcet
                       , text
                       , time
                       , transformers
    
    buildable:           True
    main-is:             Main.hs
    hs-source-dirs:     exec/Prune 

executable restore
    default-language:    Haskell2010
    build-depends: 
                         base >= 4 && < 5
                       , ansi-wl-pprint
                       , array
                       , base16-bytestring
                       , binary
                       , bytestring
                       , cmdargs
                       , containers
                       , data-default
                       , directory
                       , exceptions
                       , filepath
                       , leveldb-haskell
                       , merkle-patricia-db
                       , ethereum-rlp
                       , monad-logger
                       , monad-loops
                       , mtl
                       , network
                       , optparse-applicative
                       , process
                       , prune
                       , resourcet
                       , text
                       , time
                       , transformers
    
    buildable:           True
    main-is:             Main.hs
    hs-source-dirs:     exec/Restore

executable count
    default-language:    Haskell2010
    build-depends: 
                         base >= 4 && < 5
                       , ansi-wl-pprint
                       , array
                       , base16-bytestring
                       , binary
                       , bytestring
                       , cmdargs
                       , containers
                       , data-default
                       , directory
                       , filepath
                       , leveldb-haskell
                       , merkle-patricia-db
                       , ethereum-rlp
                       , monad-logger
                       , monad-loops
                       , mtl
                       , network
                       , optparse-applicative
                       , process
                       , prune
                       , resourcet
                       , text
                       , time
                       , transformers
    
    buildable:           True
    main-is:             Main.hs
    hs-source-dirs:      exec/Count

